--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "rm -rf dist && NODE_ENV=production babel src --out-dir dist",
     "lint": "eslint .",
-    "test": "REST_DEFAULT_ORIGIN=example.com REST_WHITELIST_DOMAINS='http://example.com https://www.example.com' REST_WHITELIST_RULES='/https?:\/\/app.example.com/' jest"
+    "test": "REST_DEFAULT_ORIGIN=example.com REST_WHITELIST_DOMAINS='http://example.com https://www.example.com' REST_WHITELIST_RULES='/https?://app.example.com/' jest"
   },
   "repository": {
     "type": "git",
@@ -33,7 +33,7 @@
     "core": "https://github.com/digibodies/core_js.git#v0.0.2",
     "eslint": "^5.9.0",
     "express": "^4.16.4",
-    "jest": "^23.6.0",
+    "jest": "^24.1.0",
     "joi": "^14.3.1"
   }
 }
